DoIt v.1.0 Initial page`s layout started; Main page`s design almost done; Pages files created.

--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -5,11 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>DoIt</title>
 
-		<link rel="stylesheet" href="./index.css" />
+		<link rel="stylesheet" href="../styles/Main.css" />
 	</head>
 	<body>
+		<div id="draggable"></div>
 		<header>
-			<div id="draggable"></div>
 			<h1 id="title">DoIt</h1>
 			<button id="headerButton" onclick="teste()">clique aqui</button>
 		</header>
