--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastro</title>
 </head>
 <body>
-    <h1>Pagina de teste</h1>
+	<div id="draggable"></div>
+
+    <h1>register page</h1>
 </body>
 </html>
