--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
-</head>
-<body>
-	<div id="draggable"></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="../styles/Resgiter.css" />
+	</head>
+	<body>
+		<div id="draggable"></div>
+		<button onclick="goBack()">Voltar</button>
 
-    <h1>register page</h1>
-</body>
+		<h1>register page</h1>
+
+		<script src="../Resgister.js"></script>
+	</body>
 </html>
