--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
-	<div id="draggable"></div>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <h1>Login page</h1>
-</body>
+		<link rel="stylesheet" href="../styles/Login.css" />
+	</head>
+	<body>
+		<div id="draggable"></div>
+
+		<button onclick="goBack()">Voltar</button>
+		<h1>Login page</h1>
+
+		<script src="../Login.js"></script>
+	</body>
 </html>
