DoIt v.1.0 Login and Register screens design`s are done; Sign in and sign up functionalities are working;

--- a/src/pages/Initial.html
+++ b/src/pages/Initial.html
@@ -6,14 +6,14 @@
 
 		<link rel="stylesheet" href="../styles/Initial.css" />
 	</head>
-	<body>
+	<body onload="isLogedIn()">
 		<div id="container">
 			<div id="draggable"></div>
 			<div id="interactionArea">
 				<div id="topArea">
 					<h1 id="title">DoIt</h1>
 					<h3 id="description">
-						Sincronize as suas tarefas com seu android!
+						Anote no seu computador e leve suas tarefas com você!
 					</h3>
 				</div>
 
@@ -32,6 +32,6 @@
 			</div>
 		</div>
 
-		<script src="../Initial.js"></script>
+		<script src="../Main.js"></script>
 	</body>
 </html>
