--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -19,6 +19,6 @@
 			<button id="addItemButton">Salvar item</button>
 		</div>
 
-		<script src="index.js"></script>
+		<script src="../Main.js"></script>
 	</body>
 </html>
