--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -3,14 +3,25 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 		<link rel="stylesheet" href="../styles/Resgiter.css" />
 	</head>
 	<body>
 		<div id="draggable"></div>
-		<button onclick="goBack()">Voltar</button>
 
-		<h1>register page</h1>
+		<button onclick="goToHome()" id='goBackButton'>Voltar</button>
 
-		<script src="../Resgister.js"></script>
+		<h2 id='pageTitle'>Crie uma conta</h2>
+		<h1 id='pageTitleDoIt'>DoIt</h1>
+
+		<h4 class="inputTitle">Digite seu email:</h4>
+		<input type="email" name="registerEmail" id="registerEmail" class='registerInput' placeholder='Email' autofocus>
+
+		<h4 class="inputTitle">Crie sua senha:</h4>
+		<input type="password" name="registerPassword" id="registerPassword" class='registerInput' placeholder="Crie sua senha (mínimo de 6 caracteres)">
+
+		<button onclick='Register()' id='resgisterButton'>Completar cadastro</button>
+
+		<script src="../Main.js"></script>
 	</body>
 </html>
