DoIt v.1.0 Login and Register ages and functionalities done; Authentication error handling created; Loading screen created.

--- a/src/pages/Initial.html
+++ b/src/pages/Initial.html
@@ -30,7 +30,11 @@
 					</div>
 				</div>
 			</div>
+			<div id="loaderContainer">
+				<div id="loader"></div>
+			</div>
 		</div>
+
 
 		<script src="../Main.js"></script>
 	</body>
