--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -21,7 +21,7 @@
 		<input type="password" name="loginPassword" id="loginPassword" class='loginInput' placeholder="Senha">
 
 		<button onclick='Login()' id='loginButton'>Entrar</button>
-		<p id='resetPasswordButton' >Esqueci a minha senha!</p>
+		<p id='resetPasswordButton' onclick="forgotPassword()">Esqueci a minha senha!</p>
 
 		<script src="../Main.js"></script>
 	</body>
