--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -11,7 +11,7 @@
 		<div id="draggable"></div>
 		<header>
 			<h1 id="title">DoIt</h1>
-			<button id="headerButton" onclick="teste()">clique aqui</button>
+			<button id="headerButton" onclick="Logout()">clique aqui</button>
 		</header>
 
 		<div id="addItemDiv">
