DoIt v.1.0 alerts changed to electron dialogs, preventing windows bug;

--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -18,7 +18,7 @@
 		<input type="email" name="registerEmail" id="registerEmail" class='registerInput' placeholder='Email' autofocus>
 
 		<h4 class="inputTitle">Crie sua senha:</h4>
-		<input type="password" name="registerPassword" id="registerPassword" class='registerInput' placeholder="Crie sua senha (mínimo de 6 caracteres)">
+		<input type="password" name="registerPassword" id="registerPassword" class='registerInput' placeholder="Mínimo de 6 caracteres">
 
 		<button onclick='Register()' id='resgisterButton'>Completar cadastro</button>
 
