--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -9,19 +9,34 @@
 	<body>
 		<div id="draggable"></div>
 
-		<button onclick="goToHome()" id='goBackButton'>Voltar</button>
+		<button onclick="goToHome()" id="goBackButton">Voltar</button>
 
-		<h2 id='pageTitle'>Faça login na sua conta</h2>
-		<h1 id='pageTitleDoIt'>DoIt</h1>
+		<h2 id="pageTitle">Faça login na sua conta</h2>
+		<h1 id="pageTitleDoIt">DoIt</h1>
 
 		<h4 class="inputTitle">Digite seu email:</h4>
-		<input type="email" name="loginEmail" id="loginEmail" class='loginInput' placeholder='Email' autofocus>
+		<input
+			type="email"
+			name="loginEmail"
+			id="loginEmail"
+			class="loginInput"
+			placeholder="Email"
+			autofocus
+		/>
 
 		<h4 class="inputTitle">Digite sua senha:</h4>
-		<input type="password" name="loginPassword" id="loginPassword" class='loginInput' placeholder="Senha">
+		<input
+			type="password"
+			name="loginPassword"
+			id="loginPassword"
+			class="loginInput"
+			placeholder="Senha"
+		/>
 
-		<button onclick='Login()' id='loginButton'>Entrar</button>
-		<p id='resetPasswordButton' onclick="forgotPassword()">Esqueci a minha senha!</p>
+		<button onclick="Login()" id="loginButton">Entrar</button>
+		<p id="resetPasswordButton" onclick="forgotPassword()">
+			Esqueci a minha senha!
+		</p>
 
 		<script src="../Main.js"></script>
 	</body>
