--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -9,18 +9,33 @@
 	<body>
 		<div id="draggable"></div>
 
-		<button onclick="goToHome()" id='goBackButton'>Voltar</button>
+		<button onclick="goToHome()" id="goBackButton">Voltar</button>
 
-		<h2 id='pageTitle'>Crie uma conta</h2>
-		<h1 id='pageTitleDoIt'>DoIt</h1>
+		<h2 id="pageTitle">Crie uma conta</h2>
+		<h1 id="pageTitleDoIt">DoIt</h1>
 
 		<h4 class="inputTitle">Digite seu email:</h4>
-		<input type="email" name="registerEmail" id="registerEmail" class='registerInput' placeholder='Email' autofocus>
+		<input
+			type="email"
+			name="registerEmail"
+			id="registerEmail"
+			class="registerInput"
+			placeholder="Email"
+			autofocus
+		/>
 
 		<h4 class="inputTitle">Crie sua senha:</h4>
-		<input type="password" name="registerPassword" id="registerPassword" class='registerInput' placeholder="Mínimo de 6 caracteres">
+		<input
+			type="password"
+			name="registerPassword"
+			id="registerPassword"
+			class="registerInput"
+			placeholder="Mínimo de 6 caracteres"
+		/>
 
-		<button onclick='Register()' id='resgisterButton'>Completar cadastro</button>
+		<button onclick="Register()" id="resgisterButton">
+			Completar cadastro
+		</button>
 
 		<script src="../Main.js"></script>
 	</body>
