DoIt v.1.0 Items rendering in real time; Icons are not rendering properly.

--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -22,7 +22,7 @@
 
 		<div id="listContainer">
 			<ul id="list">
-				<li class="listItem">
+				<!-- <li class="listItem">
 					<div class="starIcon">
 						<i class="fas fa-star" onclick="console.log('estrela')"></i>
 					</div>
@@ -32,84 +32,7 @@
 					<div class="trashIcon">
 						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
 					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
-				<li class="listItem">
-					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
-					</div>
-					<div class="textContainer">
-						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
-					</div>
-					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
-					</div>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 
