--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -3,15 +3,14 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script
-			src="https://kit.fontawesome.com/f6a01a97f6.js"
-			crossorigin="anonymous"
-		></script>
+		<script src="https://kit.fontawesome.com/f6a01a97f6.js"	crossorigin="anonymous"></script>
 		<title>DoIt</title>
 
+		<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		<link rel="stylesheet" href="../styles/Main.css" />
 	</head>
 	<body onload="loadData()">
+	<!-- <body> -->
 		<div id="draggable"></div>
 		<header>
 			<h1 id="title">DoIt</h1>
@@ -24,13 +23,13 @@
 			<ul id="list">
 				<!-- <li class="listItem">
 					<div class="starIcon">
-						<i class="fas fa-star" onclick="console.log('estrela')"></i>
+						<i class="material-icons" onclick="console.log('estrela')">star</i>
 					</div>
 					<div class="textContainer">
 						TesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTesteTeste
 					</div>
 					<div class="trashIcon">
-						<i class="far fa-trash-alt" onclick="console.log('lixo')"></i>
+						<i class="material-icons" onclick="console.log('estrela')">delete</i>
 					</div>
 				</li> -->
 			</ul>
