Doit v.1.0 Settings page crated; Settings page design`s started'; Added "Go back" button to settings page.

--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -20,7 +20,7 @@
 		<div id="draggable"></div>
 		<header>
 			<h1 id="title">DoIt</h1>
-			<button id="headerButton" onclick="Logout()">
+			<button id="headerButton" onclick="goToSettings()">
 				<i class="fas fa-cog"></i>
 			</button>
 		</header>
