DoIt v.1.0 electron-packager dependencie added; Item can be added by pressing the enter key; Texts improved; electron-store dependencie added; Application auto lauch can be configured by the user; Reset password function created; Settings page done; Some CSS improvements.

--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -40,20 +40,20 @@
 					</div>
 				</li> -->
 			</ul>
-			
-			<h5 class="listTitle">Outras tarefas</h5>
-			<ul id="notImportantList">
 
-			</ul>
+			<h5 class="listTitle">Outras tarefas</h5>
+			<ul id="notImportantList"></ul>
 		</div>
 
 		<div id="addItemDiv">
 			<div id="formContainer">
 				<div id="checkboxContainer">
-					<input type="checkbox" name="isImportant" id="isImportant">
-					<label for="isImportant" id='isImportantLabel'>Marcar tarefa como importante</label>
+					<input type="checkbox" name="isImportant" id="isImportant" />
+					<label for="isImportant" id="isImportantLabel"
+						>Marcar tarefa como importante</label
+					>
 				</div>
-				<input type="text" name="newItem" id="input" placeholder="Novo item" />
+				<input type="text" name="newItem" id="input" placeholder="Novo item"/>
 			</div>
 			<button id="addItemButton" onclick="addItem()">
 				<i class="fas fa-paper-plane"></i>
