--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -14,13 +14,13 @@
 		<h2 id="pageTitle">Crie uma conta</h2>
 		<h1 id="pageTitleDoIt">DoIt</h1>
 
-		<h4 class="inputTitle">Digite seu email:</h4>
+		<h4 class="inputTitle">Digite seu e-mail:</h4>
 		<input
 			type="email"
 			name="registerEmail"
 			id="registerEmail"
 			class="registerInput"
-			placeholder="Email"
+			placeholder="E-mail"
 			autofocus
 		/>
 
