Doit v.1.0.3 Better event listening for login and register inputs; Firestore document creation and user creating are asynchronous; Firestore list creation bug fixed.

--- a/src/pages/Login.html
+++ b/src/pages/Login.html
@@ -6,7 +6,7 @@
 
 		<link rel="stylesheet" href="../styles/Login.css" />
 	</head>
-	<body>
+	<body onload="addLoginListener()">
 		<div id="draggable"></div>
 
 		<button onclick="goToHome()" id="goBackButton">Voltar</button>
