--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -6,7 +6,7 @@
 
 		<link rel="stylesheet" href="../styles/Register.css" />
 	</head>
-	<body>
+	<body onload="addRegisterListener()">
 		<div id="draggable"></div>
 
 		<button onclick="goToHome()" id="goBackButton">Voltar</button>
