--- a/src/pages/Register.html
+++ b/src/pages/Register.html
@@ -33,7 +33,7 @@
 			placeholder="Mínimo de 6 caracteres"
 		/>
 
-		<button onclick="Register()" id="resgisterButton">
+		<button onclick="Register()" id="registerButton">
 			Completar cadastro
 		</button>
 
