Play Store URL added

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Use o aplicativo mesmo offline, e da próxima ve que conectar, seus dados serão sincronizados.
         </p>
 
-        <a href="">
+        <a href="https://play.google.com/store/apps/details?id=com.doit.webermiguel">
             <div class="icon">
                 <i class="fab fa-google-play"></i>
             </div>
