--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -48,12 +48,21 @@
 		<div id="addItemDiv">
 			<div id="formContainer">
 				<div id="checkboxContainer">
-					<input type="checkbox" name="isImportant" id="isImportant" />
+					<input
+						type="checkbox"
+						name="isImportant"
+						id="isImportant"
+					/>
 					<label for="isImportant" id="isImportantLabel"
 						>Marcar tarefa como importante</label
 					>
 				</div>
-				<input type="text" name="newItem" id="input" placeholder="Novo item"/>
+				<input
+					type="text"
+					name="newItem"
+					id="input"
+					placeholder="Novo item"
+				/>
 			</div>
 			<button id="addItemButton" onclick="addItem()">
 				<i class="fas fa-paper-plane"></i>
